--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,6 @@
 }
 
 .carouselBotones button {
-  height: 28px !important;
-  border-radius: 50%;
   opacity: 0.2;
 
 }
@@ -92,9 +90,18 @@
 /*Media queries*/
 
 @media (max-width:768px) {
+
+ .carousel-caption {
+    position: absolute;
+    top: 60% !important;
+    left: 49% !important;
+    transform: translate(-50%, -50%) !important;
+    color: #fff; /* Opcional: Cambiar el color del texto */
+  }
+  
   
   .textoCarousel h5 {
-    font-size: 40px !important;
+    font-size: 45px !important;
     font-weight: bolder;
     text-shadow: 3px 3px 5px #121212; /* Agregar sombra de texto para resaltar */
     color: #fff; /* Cambiar el color del texto a blanco para que sea legible en el fondo negro */
