--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+body{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  justify-content: space-between;
+}
 /*Precarga*/
 
 .preloader {
