Se cambia color acordeon

--- a/css/style.css
+++ b/css/style.css
@@ -196,8 +196,12 @@ body{
   height: 50px !important;
 }
 
-.accordion-item.accorHeader {
+.accorHeader.accordion-button {
   background-color: #da1212 !important;
+}
+
+.accorHeader h4 {
+  color: white !important;
 }
 
 /*Media queries*/
