--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,20 @@ body{
   color: white !important;
 }
 
+.patrocinadores {
+  background-color: #f1f1f1;
+  font-family: 'monserrat', sans-serif;
+}
+
+.enlacePatrocinador {
+  text-decoration: none !important;
+  color: #121212;
+}
+
+.enlacePatrocinador:hover {
+  color: #da1212;
+}
+
 /*Media queries*/
 /*Sm screen*/
 @media (max-width: 360px) {
@@ -268,6 +282,12 @@ body{
   .carousel2 img {
     height: 600px;
   }
+
+  .boxPatrocinadores {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: end;
+  }
 }
 
 /*Screen XL*/
@@ -285,4 +305,6 @@ body{
   .accordionPropio {
     margin-top: 10px;
   }
+
+
 }
