--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -43,8 +43,25 @@
   border-color: da1212;
 
 }
- 
 
+.botonForm button {
+  width: 25%;
+}
+ 
+/*Iconos*/
+
+.listaIconos a {
+  text-decoration: none;
+  color: black;
+}
+
+.listaIconos a:hover {
+  color: #da1212;
+}
+
+footer {
+  bottom: -145%;
+}
 
 
 
@@ -84,11 +101,20 @@
       width: 40%;
     }
 
-
-
-
+footer {
+  bottom: -185%;
+}
 
 }  
+@media (width:768px) {
+  main {
+    top: 7% !important;
+  }
+
+  footer {
+    bottom: -139%;
+}
+}
 
 
 @media (min-width: 991px) {
@@ -96,4 +122,13 @@
     height: 500px;
   }
  
+}
+
+@media (min-width: 1920px) {
+ main {
+  top: 9% !important;
+ }
+  footer {
+    bottom: -130% !important;
+  }
 }
