--- a/css/requeriments.css
+++ b/css/requeriments.css
@@ -7,3 +7,13 @@
     text-decoration: none;
     color: #da1212;
 }
+
+.sampleForms a{
+    text-decoration: none;
+    color: #da1212;
+}
+
+.sampleForms a:hover {
+    color: black;
+}
+
