se soluciona inconveniente

--- a/css/requeriments.css
+++ b/css/requeriments.css
@@ -58,7 +58,7 @@
     color: black;
   }
 
-  video {
+  .containerVirginia inframe {
     border: solid;
     color: #da1212;
     border-width: 2px;
